--- a/templates/moviegallery.html
+++ b/templates/moviegallery.html
@@ -1,3 +1,3 @@
 <% _.each(movies, function(movie) { %> 
-<li><img src="<%= movie.thumb%>" /></li> 
+<li class="span2"><a class="thumbnail" href="#"><img src="<%= movie.tbn %>" /></a></li>
 <% }); %>
