Cambiada la visualizacion de la pantalla modal

--- a/templates/moviegallery.html
+++ b/templates/moviegallery.html
@@ -1,6 +1,6 @@
 <% _.each(movies, function(movie) { %> 
 <li class="span2">
-  <a class="thumbnail" rel="popover" title="<%= movie.name %>" href="#show/movie/<%= movie.id %>">
+    <a class="thumbnail" rel="popover" title="<%= movie.name %>" href="#<%= movie.id %>">
     <% if (movie.tbn) { %>
       <img src="<%= movie.tbn %>" />
     <% } else { %>
