--- a/templates/panel_genre.html
+++ b/templates/panel_genre.html
@@ -1,6 +1,8 @@
 <div id="genre" class="tabbable tabs-right">
     <ul class="nav nav-tabs">
         <li class="active"><a href="#" data-toggle="tab">Todas</a></li>
-        <li><a href="#genre/terror" data-toggle="tab">Terror</a></li>
+        <% _.each(genres, function(genre) { %>
+        <li><a href="#genre/<%= genre %>" data-toggle="tab"><%= genre %></a></li>
+        <% }); %>
     </ul>
 </div>
