--- a/templates/filters.html
+++ b/templates/filters.html
@@ -1,8 +1,8 @@
 <div class="btn-toolbar">
     <div class="btn-group" data-toggle="buttons-radio">
+        <button id="latest" class="btn">Ultimas anyadidas</button>
         <button id="letters" class="btn">Letra</button>
         <button id="genre" class="btn">Genero</button>
         <button id="year" class="btn">Anyo</button>
-        <button id="latest" class="btn">Ultimas descargadas</button>
     </div>
 </div>
